# differ

./: Cargo.toml  MANIFEST  README.md
examples/: simple.rs
src/: differ.rs  lib.rs  structs.rs  tests.rs
